Mon Jul 27 23:07:12 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/Access.pm (_a_default): Request_response is normally
 	allowed.

	* lib/Mj/Config.pm (set_to_default): Lock the config file; we need
 	to do this since we're modifying it.
	Add request_response as valid request.

	* lib/Majordomo.pm (list_config_set_to_default): Fix typo.
	(_request_response): Add variable substitutions.

Sun Jul 26 11:27:39 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* postinstall (set_script_perms): Make sure that when wrappers are
 	being generated the backend scripts get execute permission.

	* Makefile.PL (generate_wrappers): Don't bomb if wrappers dir
 	already exists.

	* lib/Mj/MailOut.pm (owner_start): Added owner_* triple to send a
 	message to the list owner.

	* lib/mj_cf_data.pl: Add owners variable.

	* lib/Mj/MTAConfig.pm (sendmail): Update to use new 'mj_email for
 	everything' setup.

	* lib/Majordomo.pm (connect): Added post, owner, request_response
 	dispatch functions.
	(request_response): New function to mail a file in response to a
 	mail message to the -request address.

Sat Jul 25 12:50:11 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* bin/mj_email: Begin rewrite; unify all functionality that sits
 	at an alias into mj_email.

Wed Jul 22 17:07:40 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Majordomo.pm (_createlist): Make an entry in the lists hash
 	but don't fill it in.  That way subsequent commands will see the
 	list as existing and will be able to operate on it.  The call to
 	_make_list which will happen when some other command is run will
 	actually fill in the list object.

	* lib/mj_cf_data.pl: Add new 'request_answer' variable.

Tue Jun 16 12:09:55 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* Makefile.PL (generate_wrappers): Bomb if we can't open files.

Mon Jun 15 01:43:59 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>
